--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,7 @@ body {
 }
 
 main {
-    width: 16%;
-    height: 350px;
+    width: 12em;
     background-color: black;
     margin: 2em auto;
 }
@@ -30,4 +29,13 @@ p {
 button {
     width: 145px;
     margin-top: 5px;
+    margin-bottom: 10px;
+}
+
+.green {
+    color: green;
+}
+
+.red {
+    color: red;
 }
